--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.7"
 services:
   db:
     image: postgres:11
-    container_name: postgres_db
+    container_name: db
     restart: always
     ports:
-      - "5432:5432"
+      - "5431:5431"
     volumes:
       - postgres_volume:/var/lib/postgresql/data
     environment:
@@ -16,8 +16,9 @@ services:
 
   api:
     build: .
+    restart: always
     container_name: api
-    command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"
     volumes:
       - static:/code/static
       - .:/code
@@ -35,7 +36,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
       - PGADMIN_DEFAULT_PASSWORD=admin
     ports:
-      - "5050:80"
+      - "127.0.0.1:5050:80"
     depends_on:
       - db
 
@@ -47,7 +48,7 @@ services:
     volumes:
       - static:/code/static
     ports:
-      - "80:80"
+      - "85:80"
     depends_on:
       - api
 
